web page template changes

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
         <title>Hello World </title>
     </head>
     <body>
-        <h1>Hello World</h1>
-        <p>Thi is my first paragraph</p>
+        <h1>Hello <em>(with emphasis)</em> World</h1>
+    
     </body>
 </html>
