--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
+<html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Hello World </title>
     </head>
     <body>
+        <h1>Hello WoASD ASDASD ASD ASDASDASDrld</h1>
+        <p>Thi is my first paragraaaaph</p>
         <h1>Hello <em>(with emphasis)</em> World</h1>
-    
+
     </body>
 </html>
